test/asm/bracketed-macro-args.err
error: bracketed-macro-args.asm(30) -> bracketed-macro-args.asm::bad(25):
    Bracketed symbol "nonnumeric" is not numeric
error: bracketed-macro-args.asm(30) -> bracketed-macro-args.asm::bad(26):
    Invalid bracketed macro argument '\<0>'
error: bracketed-macro-args.asm(30) -> bracketed-macro-args.asm::bad(27):
    Bracketed symbol "undefined" does not exist
error: Assembly aborted (3 errors)!
